--- a/travel.html
+++ b/travel.html
@@ -16,24 +16,80 @@
     --shadow:0 10px 30px rgba(17,24,39,.12);
     --header:#f3d8b3;
     --bezier:cubic-bezier(.22,.61,.36,1);
+
+    /* accent + WORK shift to match index/races */
+    --accent:#b91c1c;
+    --work-shift:650px;
   }
-  html,body{margin:0;padding:0}
-  body{
-    font-family: ui-sans-serif,system-ui,-apple-system,Segoe UI,Inter,Roboto,Arial;
+  html,body{
+    margin:0;padding:0;
+    /* dotted paper background to match index/races */
+    background:
+      radial-gradient(circle at 1px 1px,#e8ecf1 1.2px,rgba(255,255,255,0) 1.3px) 0 0/12px 12px,
+      #fafbfc;
     color:var(--ink);
-    background: var(--bg);
     min-height:100dvh; overflow-x:hidden;
+    font-family: ui-sans-serif,system-ui,-apple-system,Segoe UI,Inter,Roboto,Arial;
   }
   /* ↓ smaller top padding to trim space above the boarding pass */
   .container{max-width:1120px;margin:0 auto;padding:8px 20px 100px}
 
-  /* Travel navbar match */
-  .nav .container { padding: 14px 20px; }
-  .nav .brand-logo img { height: 28px; }
-
   /* Decorative route + plane (background) */
   .scene{position:fixed;inset:0;z-index:0;pointer-events:none;opacity:.9}
   .route-dash{stroke:rgba(17,24,39,.22);stroke-width:1.6;stroke-dasharray:7 9;fill:none}
+
+  /* ===== Navbar copied to match index/races ===== */
+  header.navbar{position:sticky; top:24px; z-index:20; background:transparent; border-bottom:none; backdrop-filter:none;}
+  header.navbar .container{ width:100%; margin:0; padding:0 40px; }
+  .nav-inner{display:flex;align-items:center;justify-content:space-between;padding:18px 0 8px}
+  .brand{display:flex;align-items:center;gap:10px;text-decoration:none;color:inherit;font-weight:700}
+  .brand img{width:30px;height:30px;border-radius:8px;object-fit:cover}
+  .brand span{display:none;}
+  .nav-links{ position:relative; display:flex; align-items:center; gap:16px; width:100%; }
+  .nav-links a,
+  .nav-links button{
+    color:#111827; text-decoration:none; font-weight:700; font-size:14.5px; letter-spacing:.2px;
+    background:none; border:none; padding:0; cursor:pointer;
+  }
+  .nav-links a:hover, .nav-links button:hover{opacity:.75}
+  .dropdown{position:relative}
+  .dropdown-menu{
+    position:absolute; right:0; top:140%;
+    background:#fff; border:1px solid #e5e7eb; border-radius:10px;
+    box-shadow:0 10px 30px rgba(17,19,24,.10); min-width:180px; padding:8px; display:none;
+  }
+  .dropdown-menu a{
+    display:block; padding:10px 12px; border-radius:8px; font-weight:600; font-size:14px; color:#111827;
+  }
+  .dropdown-menu a:hover{background:#f8fafc}
+  .dropdown[aria-expanded="true"] .dropdown-menu{display:block}
+
+  /* active red + star accent */
+  .nav-links .active{ color:var(--accent); position:relative; }
+  .nav-links .active::before{
+    content:"✦"; position:absolute; top:-14px; left:50%; transform:translateX(-50%);
+    font-size:12px; line-height:1; color:var(--accent); opacity:.95;
+  }
+
+  /* place WORK closer to the dropdown (same 650px shift) */
+  .nav-links > a:first-child{
+    position:absolute;
+    left:50%;
+    transform: translateX(calc(-50% + var(--work-shift)));
+    font-weight:800; font-size:14.5px; letter-spacing:.2px;
+  }
+  .nav-links > .dropdown{ margin-left:auto; }
+
+  /* sparkle cursor dot */
+  .hover-dot{
+    position:fixed; left:0; top:0; width:10px; height:10px; border-radius:999px;
+    background:#facc15; box-shadow:0 0 20px rgba(250,204,21,.5);
+    transform:translate3d(-100px,-100px,0); transition:transform .12s ease-out, width .15s ease, height .15s ease, opacity .2s ease;
+    mix-blend-mode:multiply; pointer-events:none; z-index:9999; opacity:.85;
+  }
+  .dot-grow{ width:18px !important; height:18px !important; }
+
+  /* ----- your original travel styles (unchanged) ----- */
 
   /* BOARDING PASS header */
   /* ↓ smaller top/bottom margins to trim the gap above and before Next up */
@@ -160,20 +216,26 @@
 </head>
 <body class="plain-bg">
 
-  <nav class="nav">
+  <!-- Navbar (matches index/races) -->
+  <header class="navbar">
     <div class="container nav-inner">
-      <a class="brand-logo" href="./" aria-label="Home">
-        <img src="Snoopy_Welcome.png" alt="Snoopy waving hi" />
+      <a class="brand" href="index.html#top">
+        <img src="Snoopy_Welcome.png" alt="Logo">
+        <span>Jan Arroyo</span>
       </a>
-      <div class="nav-links">
-        <a href="work.html">Projects</a>
-        <a href="races.html">Races</a>
-        <a href="bake.html">Bake</a>
-        <a href="travel.html">Travel</a>
-        <a href="#contact">Contact</a>
-      </div>
+      <nav class="nav-links" aria-label="Primary">
+        <a href="index.html#work" aria-label="Work">WORK</a>
+        <div class="dropdown" aria-expanded="false">
+          <button type="button" aria-haspopup="true" aria-expanded="false" aria-label="Open Just for Fun menu">JUST FOR FUN ▾</button>
+          <div class="dropdown-menu" role="menu" aria-label="Just for Fun">
+            <a role="menuitem" href="races.html">Races</a>
+            <a role="menuitem" href="bake.html">Bake</a>
+            <a role="menuitem" href="travel.html">Travel</a>
+          </div>
+        </div>
+      </nav>
     </div>
-  </nav>
+  </header>
 
   <!-- background dashed route + plane that rotates with the path -->
   <svg class="scene" viewBox="0 0 1440 900" preserveAspectRatio="none" aria-hidden="true">
@@ -350,7 +412,41 @@
     </div>
   </div>
 
+  <!-- Hover sparkle dot -->
+  <div class="hover-dot" id="hoverDot" aria-hidden="true"></div>
+
 <script>
+  /* ===== dropdown + sparkle + active-state (added, minimal) ===== */
+  (function(){
+    const dd = document.querySelector('.dropdown');
+    if(!dd) return;
+    const btn = dd.querySelector('button');
+    const menu = dd.querySelector('.dropdown-menu');
+    const set = (open)=>{ dd.setAttribute('aria-expanded', open?'true':'false'); btn.setAttribute('aria-expanded', open?'true':'false'); };
+    btn.addEventListener('click', (e)=>{ e.stopPropagation(); set(dd.getAttribute('aria-expanded')!=='true'); });
+    document.addEventListener('click', ()=> set(false));
+    btn.addEventListener('keydown', (e)=>{ if(e.key==='Escape') set(false); });
+    menu.addEventListener('keydown', (e)=>{ if(e.key==='Escape') set(false); });
+  })();
+  (function(){
+    const dot = document.getElementById('hoverDot');
+    if(!dot) return;
+    window.addEventListener('mousemove', (e)=>{
+      dot.style.transform = `translate3d(${e.clientX - dot.offsetWidth/2}px, ${e.clientY - dot.offsetHeight/2}px, 0)`;
+    }, {passive:true});
+    const growTargets = 'a, button, .row, .nav-arrow, .btn';
+    document.addEventListener('mouseover', (e)=>{ if (e.target && e.target.closest && e.target.closest(growTargets)) dot.classList.add('dot-grow'); });
+    document.addEventListener('mouseout',  (e)=>{ if (e.target && e.target.closest && e.target.closest(growTargets)) dot.classList.remove('dot-grow'); });
+  })();
+  (function(){
+    const funBtn = document.querySelector('.nav-links .dropdown > button');
+    if (funBtn) funBtn.classList.add('active');
+  })();
+</script>
+
+<script>
+  /* ===== your original JS below (unchanged) ===== */
+
   /* reveal-in on scroll for trip cards */
   const io = new IntersectionObserver((entries)=>{
     entries.forEach(e=>{ if(e.isIntersecting){ e.target.classList.add('in-view'); io.unobserve(e.target);} });
