your commit message

--- a/travel.html
+++ b/travel.html
@@ -214,7 +214,8 @@
     transition:all .45s var(--bezier)}
 </style>
 </head>
-<body class="plain-bg">
+<body>
+
 
   <!-- Navbar (matches index/races) -->
   <header class="navbar">
