--- a/travel.html
+++ b/travel.html
@@ -17,6 +17,8 @@
     --header:#f3d8b3;
     --bezier:cubic-bezier(.22,.61,.36,1);
     --accent:#b91c1c;
+    /* from index.html — controls how far WORK is shifted right */
+    --work-shift: 650px;
   }
 
   html,body{
@@ -31,7 +33,7 @@
 
   .container{max-width:1120px;margin:0 auto;padding:8px 20px 100px}
 
-  /* ===== Navbar (matches landing page visually; robust layout) ===== */
+  /* ===== Sticky nav — copied from index.html ===== */
   header.navbar{
     position:sticky; top:24px; z-index:20;
     background:transparent; border-bottom:none; backdrop-filter:none;
@@ -43,11 +45,16 @@
   .brand img{width:30px;height:30px;border-radius:8px;object-fit:cover}
   .brand span{display:none;}
 
-  /* Right-side nav block */
-  .nav-links{
-    display:flex; align-items:center; gap:16px;
-    margin-left:auto;            /* push the two links to the far right */
+  /* Keep brand left, dropdown on right, and shift WORK toward dropdown (exactly like index) */
+  .nav-links{ position:relative; display:flex; align-items:center; gap:16px; width:100%; }
+  .nav-links > a:first-child{
+    position:absolute;
+    left:50%;
+    transform: translateX(calc(-50% + var(--work-shift)));
+    font-weight:800; font-size:14.5px; letter-spacing:.2px;
+    text-decoration:none; color:#111827;
   }
+  .nav-links > .dropdown{ margin-left:auto; }
   .nav-links a,
   .nav-links button{
     color:#111827; text-decoration:none; font-weight:700; font-size:14.5px; letter-spacing:.2px;
@@ -55,7 +62,7 @@
   }
   .nav-links a:hover, .nav-links button:hover{opacity:.75}
 
-  /* Keep order: WORK then dropdown on the far right */
+  /* Dropdown */
   .dropdown{position:relative}
   .dropdown-menu{
     position:absolute; right:0; top:140%;
@@ -68,14 +75,14 @@
   .dropdown-menu a:hover{background:#f8fafc}
   .dropdown[aria-expanded="true"] .dropdown-menu{display:block}
 
-  /* Active (red + star) */
+  /* Active (red + star) — same as index */
   .nav-links .active{ color:var(--accent); position:relative; }
   .nav-links .active::before{
     content:"✦"; position:absolute; top:-14px; left:50%; transform:translateX(-50%);
     font-size:12px; line-height:1; color:var(--accent); opacity:.95;
   }
 
-  /* ===== Page-specific styles (unchanged from your travel page) ===== */
+  /* ===== Page-specific styles (unchanged) ===== */
   .scene{position:fixed;inset:0;z-index:0;pointer-events:none;opacity:.9}
   .route-dash{stroke:rgba(17,24,39,.22);stroke-width:1.6;stroke-dasharray:7 9;fill:none}
 
@@ -158,15 +165,17 @@
 </head>
 <body>
 
-  <!-- ===== Navbar ===== -->
+  <!-- ===== Sticky nav (exactly like index) ===== -->
   <header class="navbar">
     <div class="container nav-inner">
-      <a class="brand" href="index.html#top">
+      <a class="brand" href="#top">
         <img src="Snoopy_Welcome.png" alt="Logo">
         <span>Jan Arroyo</span>
       </a>
+
       <nav class="nav-links" aria-label="Primary">
-        <a href="index.html#work" aria-label="Work">WORK</a>
+        <a href="#work" aria-label="Work">WORK</a>
+
         <div class="dropdown" aria-expanded="false">
           <button type="button" aria-haspopup="true" aria-expanded="false" aria-label="Open Just for Fun menu">JUST FOR FUN ▾</button>
           <div class="dropdown-menu" role="menu" aria-label="Just for Fun">
@@ -354,12 +363,13 @@
   <div class="hover-dot" id="hoverDot" aria-hidden="true"></div>
 
 <script>
-  // Dropdown toggle
+  // ---------- Dropdown (JUST FOR FUN) ---------- (same as index)
   (function(){
     const dd = document.querySelector('.dropdown');
     if(!dd) return;
     const btn = dd.querySelector('button');
     const menu = dd.querySelector('.dropdown-menu');
+
     function set(open){
       dd.setAttribute('aria-expanded', open ? 'true' : 'false');
       btn.setAttribute('aria-expanded', open ? 'true' : 'false');
@@ -370,7 +380,7 @@
     menu.addEventListener('keydown', (e)=>{ if(e.key==='Escape') set(false); });
   })();
 
-  // Cursor sparkle
+  // ---------- Hover “sparkle/dot” that follows cursor ---------- (same as index)
   (function(){
     const dot = document.getElementById('hoverDot');
     if(!dot) return;
@@ -379,22 +389,44 @@
     }, {passive:true});
     const growTargets = 'a, button, .row, .nav-arrow, .btn';
     document.addEventListener('mouseover', (e)=>{
-      if (e.target && (e.target.closest && e.target.closest(growTargets))) dot.classList.add('dot-grow');
+      if (e.target && (e.target.closest && e.target.closest(growTargets))) {
+        dot.classList.add('dot-grow');
+      }
     });
     document.addEventListener('mouseout', (e)=>{
-      if (e.target && (e.target.closest && e.target.closest(growTargets))) dot.classList.remove('dot-grow');
+      if (e.target && (e.target.closest && e.target.closest(growTargets))) {
+        dot.classList.remove('dot-grow');
+      }
     });
   })();
 
-  // Active state: star on fun pages
+  // ---------- Active nav behavior ---------- (same as index)
   (function(){
-    const funBtn = document.querySelector('.nav-links .dropdown > button');
-    if (funBtn) funBtn.classList.add('active');
+    const path = (location.pathname || '').toLowerCase();
+    const workLink = document.querySelector('.nav-links a[href="#work"]');
+    const funBtn   = document.querySelector('.nav-links .dropdown > button');
+
+    // On fun pages (this page), highlight JUST FOR FUN (red + star)
+    const onFunPage = /races\.html|bake\.html|travel\.html/.test(path);
+    if (onFunPage && funBtn) {
+      funBtn.classList.add('active');
+    } else if (workLink) {
+      const work = document.getElementById('work');
+      if (work) {
+        const io = new IntersectionObserver((entries)=>{
+          entries.forEach(en=>{
+            if (en.isIntersecting && en.intersectionRatio > 0.35) workLink.classList.add('active');
+            else workLink.classList.remove('active');
+          });
+        }, {threshold:[0,0.35,1]});
+        io.observe(work);
+      }
+    }
   })();
 </script>
 
 <script>
-  /* your original gallery/lightbox JS — unchanged */
+  /* ===== original travel JS (unchanged) ===== */
   const io = new IntersectionObserver((entries)=>{
     entries.forEach(e=>{ if(e.isIntersecting){ e.target.classList.add('in-view'); io.unobserve(e.target);} });
   },{threshold:.2, rootMargin:"-10% 0px -10% 0px"});
