your commit message

--- a/travel.html
+++ b/travel.html
@@ -165,19 +165,20 @@
 </head>
 <body>
 
-  <!-- ===== Sticky nav (exactly like index) ===== -->
   <header class="navbar">
     <div class="container nav-inner">
-      <a class="brand" href="#top">
+      <a class="brand" href="index.html#top">
         <img src="Snoopy_Welcome.png" alt="Logo">
         <span>Jan Arroyo</span>
       </a>
-
+  
       <nav class="nav-links" aria-label="Primary">
-        <a href="#work" aria-label="Work">WORK</a>
-
+        <a href="index.html#work" aria-label="Work">WORK</a>
+  
         <div class="dropdown" aria-expanded="false">
-          <button type="button" aria-haspopup="true" aria-expanded="false" aria-label="Open Just for Fun menu">JUST FOR FUN ▾</button>
+          <button type="button" aria-haspopup="true" aria-expanded="false" aria-label="Open Just for Fun menu">
+            JUST FOR FUN ▾
+          </button>
           <div class="dropdown-menu" role="menu" aria-label="Just for Fun">
             <a role="menuitem" href="races.html">Races</a>
             <a role="menuitem" href="bake.html">Bake</a>
@@ -187,6 +188,7 @@
       </nav>
     </div>
   </header>
+  
 
   <!-- background dashed route + plane -->
   <svg class="scene" viewBox="0 0 1440 900" preserveAspectRatio="none" aria-hidden="true">
