your commit message

--- a/travel.html
+++ b/travel.html
@@ -174,11 +174,8 @@
   
       <nav class="nav-links" aria-label="Primary">
         <a href="index.html#work" aria-label="Work">WORK</a>
-  
         <div class="dropdown" aria-expanded="false">
-          <button type="button" aria-haspopup="true" aria-expanded="false" aria-label="Open Just for Fun menu">
-            JUST FOR FUN ▾
-          </button>
+          <button type="button" aria-haspopup="true" aria-expanded="false" aria-label="Open Just for Fun menu">JUST FOR FUN ▾</button>
           <div class="dropdown-menu" role="menu" aria-label="Just for Fun">
             <a role="menuitem" href="races.html">Races</a>
             <a role="menuitem" href="bake.html">Bake</a>
