--- a/bake.html
+++ b/bake.html
@@ -30,6 +30,40 @@
 
     /* ===== NEW: Joanna-style “ghost” nav (only styling added; markup kept local) ===== */
     :root{ --accent:#b91c1c; }
+    /* Sticky nav — same setup as index/races */
+header.navbar{
+  position: sticky; top: 16px; z-index: 20;
+  background: transparent; border: 0; backdrop-filter: none;
+}
+header.navbar .container{
+  width: 100%;
+  max-width: none;        /* lets the dropdown reach the far right */
+  margin: 0;
+  padding: 0 40px;
+}
+
+/* Brand (Snoopy) */
+.brand{display:flex;align-items:center;gap:10px;text-decoration:none;color:inherit;font-weight:700}
+.brand img{width:30px;height:30px;border-radius:8px;object-fit:cover}
+.brand span{display:none}
+
+/* Layout: WORK centered & shifted; dropdown hugs right */
+.nav-links{ position:relative; display:flex; align-items:center; gap:16px; width:100%; }
+.nav-links > a:first-child{
+  position:absolute;
+  left:50%;
+  transform: translateX(calc(-50% + var(--work-shift)));
+  font-weight:800; font-size:14.5px; letter-spacing:.2px; text-decoration:none; color:#111827;
+}
+.nav-links > .dropdown{ margin-left:auto; }
+
+/* Active star (same as other pages) — keep your existing styles if already present */
+.nav-links .active{ color:var(--accent); position:relative; }
+.nav-links .active::before{
+  content:"✦"; position:absolute; top:-14px; left:50%; transform:translateX(-50%);
+  font-size:12px; line-height:1; color:var(--accent); opacity:.95;
+}
+
     .nav{
       position:sticky; top:16px; z-index:20;
       background:transparent; border:0; backdrop-filter:none;
@@ -445,13 +479,27 @@
   <div class="modal-backdrop" id="rcpBackdrop"></div>
   <div class="modal-dialog" id="rcpDialog" aria-hidden="true">
     <article class="modal-panel" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
-      <header class="modal-head">
-        <div>
-          <div class="modal-title" id="modalTitle">Recipe</div>
-          <div class="muted" id="modalMeta"></div>
+      <header class="navbar">
+  <div class="container nav-inner">
+    <a class="brand" href="index.html#top">
+      <img src="Snoopy_Welcome.png" alt="Logo">
+      <span>Jan Arroyo</span>
+    </a>
+
+    <nav class="nav-links" aria-label="Primary">
+      <a href="index.html#work" aria-label="Work">WORK</a>
+      <div class="dropdown" aria-expanded="false">
+        <button type="button" aria-haspopup="true" aria-expanded="false">JUST FOR FUN ▾</button>
+        <div class="dropdown-menu" role="menu" aria-label="Just for Fun">
+          <a role="menuitem" href="races.html">Races</a>
+          <a role="menuitem" href="bake.html" class="active">Bake</a>
+          <a role="menuitem" href="travel.html">Travel</a>
         </div>
-        <button class="modal-close" id="rcpClose" aria-label="Close">×</button>
-      </header>
+      </div>
+    </nav>
+  </div>
+</header>
+
       <div class="modal-body">
         <div class="modal-photos">
           <img id="mImg1" alt="" loading="lazy">
