--- a/bake.html
+++ b/bake.html
@@ -521,6 +521,15 @@ header.navbar .container{
   </div>
 </header>
 
+<div class="modal-head">
+  <div>
+    <h3 id="modalTitle" class="modal-title" style="margin:0"></h3>
+    <div id="modalMeta" class="muted"></div>
+  </div>
+  <button id="rcpClose" class="modal-close" aria-label="Close">×</button>
+</div>
+
+
       <div class="modal-body">
         <div class="modal-photos">
           <img id="mImg1" alt="" loading="lazy">
