--- a/index.html
+++ b/index.html
@@ -93,6 +93,58 @@
     .hero p{color:var(--muted);font-size: clamp(15px, 2vw, 18px); line-height:1.6; margin:0}
     .hero img{width:100%;border-radius:18px;box-shadow:0 18px 50px rgba(17,19,24,.16);object-fit:cover}
 
+    /* === Joanna-style hero layout & portrait === */
+.hero-grid{ align-items:center; gap:32px; grid-template-columns:.9fr 1.1fr; }
+
+/* Put photo left, text right without touching other sections */
+.hero .photo{ order:1; }
+.hero .text{ order:2; }
+
+/* Circular portrait wrapper */
+.portrait-wrap{
+  width:min(34vw, 520px);
+  aspect-ratio:1/1;
+  border-radius:9999px;
+  overflow:hidden;
+  box-shadow:0 20px 60px rgba(17,19,24,.18);
+  position:relative;
+  background:#fff;
+}
+
+/* soft ring behind the portrait */
+.portrait-wrap::after{
+  content:"";
+  position:absolute; inset:-14px;
+  border-radius:inherit;
+  background:radial-gradient(120% 120% at 25% 20%, rgba(15,23,42,.06), rgba(15,23,42,0) 60%);
+  pointer-events:none;
+}
+
+/* Make the hero img behave inside the circle */
+.portrait-wrap > img{
+  width:100%; height:100%;
+  object-fit:cover; display:block;
+}
+
+/* Headline tweaks + tiny red sparkle accents */
+.hero .text h1{ position:relative; margin-bottom:12px; }
+.hero .text h1::after{
+  content:"✦"; color:var(--accent);
+  position:absolute; right:-14px; top:-8px; font-size:16px; line-height:1;
+}
+.hero .text h1::before{
+  content:"+"; color:var(--accent);
+  position:absolute; right:22px; bottom:-14px; font-size:14px; line-height:1;
+}
+
+/* Mobile stacking stays clean */
+@media (max-width:900px){
+  .hero-grid{ grid-template-columns:1fr; gap:18px; }
+  .portrait-wrap{ width:min(65vw, 420px); margin-inline:auto; }
+  .hero .text{ text-align:left; }
+}
+
+
     /* ===== Sections ===== */
     .section{padding:18px 0 0}
     .section h2{
@@ -230,14 +282,12 @@
   </header>
 
   <!-- ===== Hero / Intro ===== -->
-  <section id="top" class="hero">
-    <div class="container hero-grid">
-      <div>
-        <h1>Hey, what's up!</h1>
-        <p>I'm Jan Arroyo — studying CS &amp; Business at USC. I like building products, doing design &amp; research, and creating impact with community partners.</p>
-      </div>
-      <div>
-        <!-- Fallback that only swaps once -->
+<section id="top" class="hero">
+  <div class="container hero-grid">
+    <!-- Photo left -->
+    <div class="photo">
+      <div class="portrait-wrap">
+        <!-- same image element & fallback logic you already had -->
         <img id="hero-photo"
              src="images/IMG_8427.PNG"
              alt="Jan Arroyo headshot"
@@ -259,7 +309,14 @@
              })(this)" />
       </div>
     </div>
-  </section>
+
+    <!-- Text right -->
+    <div class="text">
+      <h1>Hey, what's up!</h1>
+      <p>I'm Jan Arroyo — studying CS &amp; Business at USC. I like building products, doing design &amp; research, and creating impact with community partners.</p>
+    </div>
+  </div>
+</section>
 
   <!-- ===== Work ===== -->
   <section id="work" class="section">
