--- a/index.html
+++ b/index.html
@@ -93,55 +93,46 @@
     .hero p{color:var(--muted);font-size: clamp(15px, 2vw, 18px); line-height:1.6; margin:0}
     .hero img{width:100%;border-radius:18px;box-shadow:0 18px 50px rgba(17,19,24,.16);object-fit:cover}
 
-    /* === Joanna-style hero layout & portrait === */
-.hero-grid{ align-items:center; gap:32px; grid-template-columns:.9fr 1.1fr; }
+   /* Refine hero balance */
+.hero-grid{
+  grid-template-columns: 1fr 1fr; /* equal halves */
+  align-items: center;
+  gap: 40px;
+}
 
-/* Put photo left, text right without touching other sections */
-.hero .photo{ order:1; }
-.hero .text{ order:2; }
-
-/* Circular portrait wrapper */
+/* Circle photo smaller + centered */
 .portrait-wrap{
-  width:min(34vw, 520px);
-  aspect-ratio:1/1;
-  border-radius:9999px;
-  overflow:hidden;
-  box-shadow:0 20px 60px rgba(17,19,24,.18);
-  position:relative;
-  background:#fff;
+  width: min(28vw, 420px);
+  aspect-ratio: 1/1;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 50%;
+  overflow: hidden;
+  box-shadow: 0 12px 40px rgba(17,19,24,.15);
 }
-
-/* soft ring behind the portrait */
-.portrait-wrap::after{
-  content:"";
-  position:absolute; inset:-14px;
-  border-radius:inherit;
-  background:radial-gradient(120% 120% at 25% 20%, rgba(15,23,42,.06), rgba(15,23,42,0) 60%);
-  pointer-events:none;
-}
-
-/* Make the hero img behave inside the circle */
 .portrait-wrap > img{
-  width:100%; height:100%;
-  object-fit:cover; display:block;
+  width: 100%; height: 100%; object-fit: cover;
 }
 
-/* Headline tweaks + tiny red sparkle accents */
-.hero .text h1{ position:relative; margin-bottom:12px; }
+/* Text column narrower */
+.hero .text{
+  max-width: 540px;
+}
+
+/* Heading accents tighter like Joanna */
+.hero .text h1{ position:relative; display:inline-block; }
 .hero .text h1::after{
   content:"✦"; color:var(--accent);
-  position:absolute; right:-14px; top:-8px; font-size:16px; line-height:1;
+  position:absolute; top:-6px; right:-18px;
+  font-size:16px;
 }
 .hero .text h1::before{
-  content:"+"; color:var(--accent);
-  position:absolute; right:22px; bottom:-14px; font-size:14px; line-height:1;
+  content:"°"; color:var(--accent);
+  position:absolute; top:-12px; right:2px;
+  font-size:12px;
 }
-
-/* Mobile stacking stays clean */
-@media (max-width:900px){
-  .hero-grid{ grid-template-columns:1fr; gap:18px; }
-  .portrait-wrap{ width:min(65vw, 420px); margin-inline:auto; }
-  .hero .text{ text-align:left; }
+.hero .text h1 span.plus{
+  color:var(--accent); margin-left:6px; font-size:16px;
 }
 
 
@@ -312,7 +303,7 @@
 
     <!-- Text right -->
     <div class="text">
-      <h1>Hey, what's up!</h1>
+      <h1>Hey, I'm Jan! <span class="plus">+</span></h1>
       <p>I'm Jan Arroyo — studying CS &amp; Business at USC. I like building products, doing design &amp; research, and creating impact with community partners.</p>
     </div>
   </div>
